Make autocomplete formatting rule configurable.

--- a/config/vufind/EDS.ini
+++ b/config/vufind/EDS.ini
@@ -270,6 +270,11 @@ default_handler = Eds
 ; Auto-submit autocomplete on click or enter
 auto_submit = true
 
+; Query formatting rules for autocomplete, indexed by search handler name;
+; formatting_rule[*] defines a rule that is used by default if a more specific type
+; is not provided.
+formatting_rule[*] = "phrase"
+
 ; In this section, set the key equal to a search type from [Basic_Searches] and
 ; the value equal to an autocomplete handler in order to customize autocompletion
 ; behavior when that search type is selected. (default: Eds:rawqueries)
