--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -634,6 +634,11 @@ enabled = true
 default_handler = Solr
 ; Auto-submit autocomplete on click or enter
 auto_submit = true
+; Query formatting rules for autocomplete, indexed by search handler name;
+; formatting_rule[*] defines a rule that is used by default if a more specific type
+; is not provided.
+formatting_rule[*] = "phrase"
+formatting_rule[tag] = "none"
 
 ; In this section, set the key equal to a search handler from searchspecs.yaml and
 ; the value equal to an autocomplete handler in order to customize autocompletion
