--- a/config/vufind/reserves.ini
+++ b/config/vufind/reserves.ini
@@ -32,6 +32,7 @@ checkboxSections[] = CheckboxFacets
 
 [Autocomplete]
 enabled = true
+formatting_rule[*] = "phrase"
 
 [Autocomplete_Types]
 Reserves = "SolrReserves:AllFields:course,instructor,department"
