--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -636,7 +636,9 @@ default_handler = Solr
 auto_submit = true
 ; Query formatting rules for autocomplete, indexed by search handler name;
 ; formatting_rule[*] defines a rule that is used by default if a more specific type
-; is not provided.
+; is not provided. Currently supported rules:
+; - phrase: Put the value in double quotes, and backslash-escape quites in the phrase
+; - none:   Search for the term exactly as-is, with no manipulation.
 formatting_rule[*] = "phrase"
 formatting_rule[tag] = "none"
 
