Fix subject strategy description

--- a/config/vufind/LibGuidesAPI.ini
+++ b/config/vufind/LibGuidesAPI.ini
@@ -37,7 +37,9 @@ api_base_url = https://lgapi-us.libapps.com/1.2
 ; 
 ; call_number
 ;       Finds the call number facet with the most matches for
-;       the given search, then uses the mapping ??????? below to map that to a profile
+;       the given search, then uses the profile_aliases, 
+;       call_numbers, and call_number_length settings below
+;       to map that to a profile.
 ; subject
 ;       Finds a LibGuides "subject" with the closest string
 ;       match to the query string, and returns a profile 
