Make alphabrowse autocomplete configurable.

--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -654,6 +654,10 @@ CallNumber = "SolrCN"
 ISN = "Solr:ISN:isbn,issn"
 Coordinate = "None"
 tag = "Tag"
+alphabrowse_author = "Solr:Author:author,author2,author_corporate"
+alphabrowse_lcc = "SolrCN"
+alphabrowse_title = "Solr:Title"
+alphabrowse_topic = "Solr:Subject:topic"
 
 ; When snippets are enabled, this section can be used to display captions based on
 ; the Solr fields from which the snippets were obtained.  Keys are the names of Solr
