Make alphabrowse autocomplete formatting configurable.

--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -640,6 +640,10 @@ auto_submit = true
 ; - phrase: Put the value in double quotes, and backslash-escape quites in the phrase
 ; - none:   Search for the term exactly as-is, with no manipulation.
 formatting_rule[*] = "phrase"
+formatting_rule[alphabrowse_author] = "none"
+formatting_rule[alphabrowse_lcc] = "none"
+formatting_rule[alphabrowse_title] = "none"
+formatting_rule[alphabrowse_topic] = "none"
 formatting_rule[tag] = "none"
 
 ; In this section, set the key equal to a search handler from searchspecs.yaml and
