Use title_sort field for title browse autocomplete suggestions.

--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -660,7 +660,7 @@ Coordinate = "None"
 tag = "Tag"
 alphabrowse_author = "Solr:Author:author,author2,author_corporate"
 alphabrowse_lcc = "SolrCN"
-alphabrowse_title = "Solr:Title"
+alphabrowse_title = "Solr:Title:title_sort"
 alphabrowse_topic = "Solr:Subject:topic"
 
 ; When snippets are enabled, this section can be used to display captions based on
