--- a/config/vufind/LibGuidesAPI.ini
+++ b/config/vufind/LibGuidesAPI.ini
@@ -35,12 +35,12 @@ api_base_url = https://lgapi-us.libapps.com/1.2
 ;
 ; Available strategies are:
 ; 
-; call_number
+; CallNumber
 ;       Finds the call number facet with the most matches for
 ;       the given search, then uses the profile_aliases, 
 ;       call_numbers, and call_number_length settings below
 ;       to map that to a profile.
-; subject
+; Subject
 ;       Finds a LibGuides "subject" with the closest string
 ;       match to the query string, and returns a profile 
 ;       "expert" associated with that subject.  Note that this
@@ -49,8 +49,8 @@ api_base_url = https://lgapi-us.libapps.com/1.2
 ;       will be evaluated.
 ;       Re: subjects see see https://ask.springshare.com/libguides/faq/1109 
 ;
-;strategies[] = call_number
-;strategies[] = subject
+;strategies[] = CallNumber
+;strategies[] = Subject
 
 ; For the call_number strategy, truncate any result call number
 ; to the first 'call_number_length' characters to match the
