--- a/config/vufind/LibGuidesAPI.ini
+++ b/config/vufind/LibGuidesAPI.ini
@@ -52,6 +52,10 @@ api_base_url = https://lgapi-us.libapps.com/1.2
 ;strategies[] = CallNumber
 ;strategies[] = Subject
 
+; For the call_number strategy, retrieve the call numbers
+; from this facet field.  Default is 'callnumber-first';
+;call_number_field = 'callnumber-first';
+
 ; For the call_number strategy, truncate any result call number
 ; to the first 'call_number_length' characters to match the
 ; call_numbers array keys below.  Default is 3.
