Add support for changing Solr port in build.xml.

--- a/build.xml
+++ b/build.xml
@@ -46,6 +46,7 @@
   <property name="solr_startup_sleep" value="0" />
   <property name="solr_additional_jvm_options" value="-Dlog4j2.formatMsgNoLookups=true" />
   <property name="solr_version" value="9.1.1" />
+  <property name="solr_port" value="8983" />
   <property name="skip_phpdoc" value="false" />
   <property name="phpdoc_version" value="3.3.1" />
   <property name="html_validator" value="" /><!-- set to base address of NU Validator (e.g. http://localhost:8888/) for HTML validation during Mink tests -->
@@ -400,7 +401,7 @@
 
   <!-- Install and Activate VuFind -->
   <target name="startup" description="install and activate demo">
-    <property name="solr_pid_file" value="${localdir}/solr-8983.pid" />
+    <property name="solr_pid_file" value="${localdir}/solr-${solr_port}.pid" />
     <!-- fail if the system is already running -->
     <if>
       <available file="${solr_pid_file}" />
@@ -496,7 +497,7 @@
 
     <!-- Generate basic configuration -->
     <php expression="end(explode('/', '${vufindurl}'))" returnProperty="basepath" />
-    <exec command="php ${srcdir}/install.php --basepath=/${basepath} --non-interactive" passthru="true" checkreturn="true" />
+    <exec command="php ${srcdir}/install.php --basepath=/${basepath} --non-interactive --solr-port=${solr_port}" passthru="true" checkreturn="true" />
 
     <!-- Update config.ini to activate DB connection, exception logging and test mode -->
     <if>
@@ -574,7 +575,7 @@
   <!-- Set up Solr -->
   <target name="setup_solr">
     <!-- Start Solr using restart in case of old PID files -->
-    <exec command="SOLR_PID_DIR=${localdir} VUFIND_HOME=${srcdir} SOLR_ADDITIONAL_JVM_OPTIONS=${solr_additional_jvm_options} ${srcdir}/solr.sh restart" passthru="true" checkreturn="true" />
+    <exec command="SOLR_PID_DIR=${localdir} VUFIND_HOME=${srcdir} SOLR_ADDITIONAL_JVM_OPTIONS=${solr_additional_jvm_options} SOLR_PORT=${solr_port} ${srcdir}/solr.sh restart" passthru="true" checkreturn="true" />
     <!-- fail if Solr did not start up successfully: -->
     <if>
       <not><available file="${solr_pid_file}" /></not>
@@ -658,7 +659,7 @@ ${git_status}
     </if>
 
     <!-- stop Solr -->
-    <exec command="SOLR_PID_DIR=${localdir} VUFIND_HOME=${srcdir} SOLR_ADDITIONAL_JVM_OPTIONS=${solr_additional_jvm_options} ${srcdir}/solr.sh stop" passthru="true" />
+    <exec command="SOLR_PID_DIR=${localdir} VUFIND_HOME=${srcdir} SOLR_ADDITIONAL_JVM_OPTIONS=${solr_additional_jvm_options} SOLR_PORT=${solr_port} ${srcdir}/solr.sh stop" passthru="true" />
 
     <!-- run extra cleanup action, if any -->
     <if>
@@ -735,7 +736,7 @@ ${git_status}
 
   <!-- Reset database and configuration of the demo setup -->
   <target name="reset_setup" description="reset configuration and database of demo">
-    <property name="solr_pid_file" value="${localdir}/solr-8983.pid" />
+    <property name="solr_pid_file" value="${localdir}/solr-${solr_port}.pid" />
     <!-- fail if the system is not already running -->
     <if>
       <not><available file="${solr_pid_file}" /></not>
