improve config.ini comments

--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -597,9 +597,9 @@ username_hint = username_only_letters_numbers_and_basic_punctuation
 ;delete_ratings_with_user = false
 
 ; "Remember me" functionality for listed login methods. If the user chooses to save the login,
-; a login token cookie and a database entry will be created. Users browser information will be 
+; a login token cookie and a database entry will be created. Users' browser information will be 
 ; stored and browser detection is handled by get_browser(), so make sure to have a recent
-; browscap.ini file configured in PHP. Login methods are written in lowercase.
+; browscap.ini file configured in PHP.
 ;persistent_login = "database,multiils"
 
 ; Persistent login token lifetime in days
