Add new setting to more ini files.

--- a/config/vufind/LibGuidesAPI.ini
+++ b/config/vufind/LibGuidesAPI.ini
@@ -21,6 +21,13 @@
 ; Base URL of the LibGuides API
 api_base_url = https://lgapi-us.libapps.com/1.2
 
+; This setting can be used to configure pagination control on top of results.
+; Possible options are:
+; empty string or false  No top pagination (default)
+; simple                 Simple next/prev button pagination
+; full                   Full pagination alike to the one at the bottom of results
+;top_paginator = simple
+
 ; Calls to GET (...)/accounts endpoint
 [GetAccounts]
 ; Duration (seconds) to cache response data.  Default is 600.
