Make email subject configurable from config.ini. Use template for email body

--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -605,6 +605,9 @@ username_hint = username_only_letters_numbers_and_basic_punctuation
 ; Persistent login token lifetime in days
 ;persistent_login_lifetime = 60
 
+; Subject for the email sent after a suspicious login has been detected.
+;login_warning_email_subject = "Alert: Suspicious login detected"
+
 ; See the comments in library/VF/Auth/MultiAuth.php for full details
 ; on using multiple authentication methods.  Note that MultiAuth assumes login
 ; with username and password, so some methods (i.e. Shibboleth) may not be
