--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -1728,7 +1728,7 @@ skip_numeric = true
 ; directory.  The value of each setting is the on-screen name of the language,
 ; and will itself be subject to translation through the language files!
 ;
-; Enable keys to see the keys of the translation instead of a translation.
+; Enable "debug" to see the keys of the translation instead of a translation.
 ; This can be helpful in development environments but should be deactivated
 ; in production.
 ;
