--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vufind",
-  "version": "9.0.2",
+  "version": "9.0.3",
   "description": "Dev tools to handle css preprocessing, js magic, and compression",
   "repository": {
     "type": "git",
@@ -14,16 +14,21 @@
     "watch": "npm run watch:css",
     "build-dev": "npm run build-dev:css",
     "watch-dev": "npm run watch-dev:css",
+
     "build:css": "npm run build:less",
     "watch:css": "npm run watch:less",
     "build-dev:css": "npm run build-dev:less",
     "watch-dev:css": "npm run watch-dev:less",
+
     "build:less": "grunt less && npm run lessToSass",
     "watch:less": "grunt watch:less",
     "build-dev:less": "grunt lessdev && npm run lessToSass",
     "watch-dev:less": "grunt watch:lessdev",
+
     "build:scss": "grunt scss",
+    "check:scss": "grunt check:scss",
     "watch:scss": "grunt watch:scss",
+
     "lessToSass": "grunt lessToSass",
     "watch:lessToSass": "grunt watch:lessToSass"
   },
@@ -35,14 +40,14 @@
     "grunt-less-to-sass": "duvillierA/grunt-less-to-sass#0.0.11",
     "grunt-sass": "^3.1.0",
     "jit-grunt": "^0.10.0",
-    "node-sass": "^7.0.1",
-    "vanilla-cookieconsent": "3.0.0-rc.14"
+    "node-sass": "^7.0.1"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
     "eslint-plugin-no-jquery": "^2.7.0",
     "grunt-contrib-watch": "^1.1.0",
     "jshint": "^2.13.4",
-    "jstree": "3.3.15"
+    "jstree": "3.3.15",
+    "vanilla-cookieconsent": "3.0.0-rc.16"
   }
 }
