--- a/config/vufind/Demo.ini
+++ b/config/vufind/Demo.ini
@@ -198,14 +198,14 @@ extraHoldFields = "comments:requestGroup:pickUpLocation:proxiedUsers:startDate:r
 ; This section can be used to create simulated proxied users (for testing proxy
 ; requests)
 [ProxiedUsers]
-;id1 = User 1
-;id2 = User 2
+id1 = User 1
+id2 = User 2
 
 ; This section can be used to create simulated users who serve as proxies for
 ; the active user (for testing "list proxies" functionality)
 [ProxyingUsers]
-;id3 = User 3
-;id4 = User 4
+id3 = User 3
+id4 = User 4
 
 ; This section controls record link behavior
 [RecordLinks]
