--- a/package.json
+++ b/package.json
@@ -39,9 +39,7 @@
     "grunt-less-to-sass": "duvillierA/grunt-less-to-sass#0.0.11",
     "grunt-sass": "^3.1.0",
     "jit-grunt": "^0.10.0",
-    "node-sass": "^7.0.1",
-    "simple-keyboard": "^3.6.0",
-    "simple-keyboard-layouts": "^3.0.0"
+    "node-sass": "^7.0.1"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
@@ -49,6 +47,8 @@
     "grunt-contrib-watch": "^1.1.0",
     "jshint": "^2.13.4",
     "jstree": "3.3.15",
+    "simple-keyboard": "^3.6.0",
+    "simple-keyboard-layouts": "^3.0.0",
     "vanilla-cookieconsent": "3.0.0-rc.16"
   }
 }
