--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -120,7 +120,8 @@ retain_filters_by_default = true
 ;default_filters[] = "(format:Book AND institution:MyInstitution)"
 
 ; Default record fields to fetch from Solr when searching (Solr parameter 'fl')
-; Default is "*" (since VuFind 7.0). To restore previous setting, just uncomment
+; Default is "*" (since VuFind 7.0). When Explain is enabled 'score' will automatically be
+; added if it is not already included. To restore previous setting, just uncomment
 ; line below.
 ;default_record_fields = "*,score"
 
@@ -839,3 +840,16 @@ maxLimit = 100
 ; ttl, Time to Live, i.e. cache entry life time in seconds. 300 seconds by default.
 ;options[ttl] = 300
 
+; This section provides settings for the explain feature. When enabled the result
+; list contains links to the explanation why a title was found and how the relevance
+; is calculated.
+[Explain]
+;enabled = true
+; The explanation is split into the main fields and a rest.
+; minPercent gives a lower bound for fields to be included. All fields with
+; a percentage lower than minPercent are summarized in the rest.
+;minPercent = 0
+; maxFields gives a upper bound for the number of main fields. Set negative for no boundary.
+;maxFields = -1
+; Number of decimal places to be displayed.
+;decimal_places = 2
