--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "node-sass": "^7.0.1"
   },
   "devDependencies": {
+    "chart.js": "^4.4.0",
     "eslint": "^8.15.0",
     "eslint-plugin-no-jquery": "^2.7.0",
     "grunt-contrib-watch": "^1.1.0",
