Add package-lock.json to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ import/solrmarc.log*
 lessphp_*.list
 module/VuFind/tests/.phpunit.result.cache
 node_modules
+package-lock.json
 public/swagger-ui
 local/DirLocations.ini
 local/config/vufind/*.ini
