Fix issues from review.

--- a/config/vufind/Blender.ini
+++ b/config/vufind/Blender.ini
@@ -88,7 +88,9 @@ Subject = Subject
 ; The name of each setting below corresponds with a Search/Fields mapping in
 ; BlenderMappings.yaml.
 ; Note that you will need to ensure that all enabled backends support advanced
-; searches (Solr, SolrAuth, EDS and Primo do).
+; searches (Solr, SolrAuth, EDS and Primo do). You can comment out or delete all
+; of the options in this section to disable advanced search in situations where
+; all backends cannot support it.
 [Advanced_Searches]
 AllFields = adv_search_all
 Title = adv_search_title
