--- a/config/vufind/combined.ini
+++ b/config/vufind/combined.ini
@@ -73,8 +73,11 @@ columns = 3
 ;                    after each column has been given one list.
 ; 'left' will result in a distribution of [0,3,4+], 1, 2.
 ; 'right' will result in a distribution of 0, 1, [2,3,4+].
+; 'grid' behaves similar to 'distributed', except that the order of modules
+;     (rather than the order of entire columns) is maintained on small screens,
+;     and each module's height is increased to match the tallest module in its row
 ;
-; distributed, left, right
+; distributed, left, right, grid
 stack_placement = distributed
 
 [Solr]
