--- a/config/vufind/Summon.ini
+++ b/config/vufind/Summon.ini
@@ -357,7 +357,7 @@ auto_submit = true
 ; Query formatting rules for autocomplete, indexed by search handler name;
 ; formatting_rule[*] defines a rule that is used by default if a more specific type
 ; is not provided. Currently supported rules:
-; - phrase: Put the value in double quotes, and backslash-escape quites in the phrase
+; - phrase: Put the value in double quotes, and backslash-escape quotes in the phrase
 ; - none:   Search for the term exactly as-is, with no manipulation.
 formatting_rule[*] = "phrase"
 
