[VUFIND-1638] Improve flexibility of autocomplete autosubmit.

--- a/config/vufind/reserves.ini
+++ b/config/vufind/reserves.ini
@@ -32,6 +32,7 @@ checkboxSections[] = CheckboxFacets
 
 [Autocomplete]
 enabled = true
+auto_submit = true
 formatting_rule[*] = "phrase"
 
 [Autocomplete_Types]
