Add option to enable facet filters for advanced search facets

--- a/config/vufind/facets.ini
+++ b/config/vufind/facets.ini
@@ -293,6 +293,9 @@ translated_facets[] = callnumber-first:CallNumberFirst
 ; limits must be separated using the same character set here.
 ;limitDelimiter = "::"
 
+; Optional setting to enable FacetFilters and ExcludeFilters for advanced search facets.
+;enable_filters[] = Language
+
 [HomePage]
 callnumber-first = "Call Number"
 language         = Language
