--- a/config/vufind/combined.ini
+++ b/config/vufind/combined.ini
@@ -10,6 +10,8 @@
 ; sublabel = Text to display below the header (optional)
 ; more_link = The text of the link to access more results; set to false to
 ;        disable all "more results" links for this entry.
+; advanced_link = The text of the link to load the advanced search page for
+;        this backend and query; set to false to disable the link.
 ; ajax = If true, these results will load via AJAX; otherwise, they will load
 ;        inline (default = false)
 ; hide_if_empty = If true, this section will be completely suppressed from
@@ -81,6 +83,7 @@ stack_placement = distributed
 label = Catalog
 ;sublabel = "library books, videos, CDs, microform, local resources"
 more_link = "More catalog results"
+;advanced_link = "advanced search"
 ;limit = 10
 
 [Summon]
