Capitalize the advanced search link

--- a/config/vufind/combined.ini
+++ b/config/vufind/combined.ini
@@ -83,7 +83,7 @@ stack_placement = distributed
 label = Catalog
 ;sublabel = "library books, videos, CDs, microform, local resources"
 more_link = "More catalog results"
-;advanced_link = "advanced search"
+;advanced_link = "Advanced Search"
 ;limit = 10
 
 [Summon]
