--- a/composer.json
+++ b/composer.json
@@ -94,7 +94,9 @@
         "vufind-org/vufind-marc": "1.0.2",
         "webfontkit/open-sans": "^1.0",
         "wikimedia/composer-merge-plugin": "2.1.0",
-        "yajra/laravel-pdo-via-oci8": "3.3.1"
+        "yajra/laravel-pdo-via-oci8": "3.3.1",
+        "league/commonmark": "2.3.9",
+        "elgigi/commonmark-emoji": "2.0.0"
     },
     "require-dev": {
         "behat/mink": "1.10.0",
