[VUFIND-1641] Use holdings_id instead of holding_id for Alma.

--- a/config/vufind/Alma.ini
+++ b/config/vufind/Alma.ini
@@ -38,7 +38,7 @@ http_timeout = 30
 ; HMACKeys - A list of hold form element names that will be analyzed for consistency
 ; during hold form processing. Most users should not need to change this setting.
 ; For activating title level hold request, add "description" and "level".
-HMACKeys = id:item_id:holding_id
+HMACKeys = id:item_id:holdings_id
 
 ; defaultRequiredDate - A colon-separated list used to set the default "not required
 ; after" date for holds in the format days:months:years
