--- a/config/vufind/combined.ini
+++ b/config/vufind/combined.ini
@@ -9,9 +9,11 @@
 ; label = The header on the column
 ; sublabel = Text to display below the header (optional)
 ; more_link = The text of the link to access more results; set to false to
-;        disable all "more results" links for this entry.
+;        disable all "more results" links for this entry.  This text may
+;        also be a translation key.
 ; advanced_link = The text of the link to load the advanced search page for
 ;        this backend and query; set to false to disable the link.
+;        This text may also be a translation key.
 ; ajax = If true, these results will load via AJAX; otherwise, they will load
 ;        inline (default = false)
 ; hide_if_empty = If true, this section will be completely suppressed from
