Added permissions example for Notifications.

--- a/config/vufind/permissions.ini
+++ b/config/vufind/permissions.ini
@@ -183,3 +183,8 @@ role = loggedin
 ;permission[] = "access.alma.webhook.challenge"
 ;require = ALL
 ;ipRange[] = "127.0.0.1"
+
+; Example permission for Notifications
+;[notifications.Admin]
+;permission[] = access.AdminModule
+;username[] = admin
