created combined ils driver

--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -257,6 +257,7 @@ session_name = VUFIND_SESSION
 ;   - Aleph
 ;   - Alma
 ;   - Amicus
+;   - CombinedDriver (combining multiple drivers)
 ;   - DAIA (using either XML or JSON API)
 ;   - Demo (fake ILS driver returning complex responses)
 ;   - Evergreen
