--- a/config/vufind/facets.ini
+++ b/config/vufind/facets.ini
@@ -294,7 +294,7 @@ translated_facets[] = callnumber-first:CallNumberFirst
 ;limitDelimiter = "::"
 
 ; Optional setting to enable FacetFilters and ExcludeFilters for advanced search facets.
-;enable_filters[] = Language
+;enable_filters[] = true
 
 [HomePage]
 callnumber-first = "Call Number"
@@ -361,3 +361,14 @@ custom_filter_field = "vufind"
 ; combination with checkbox facets if you want to exclude values by default
 ; and provide a checkbox that allows them to be included.
 ;inverted_filters[include_books] = '-format:"Book"'
+
+; Exclude filters can be specified to exclude certain filters from showing in hierarchical
+; facets. Regex.
+;[ExcludeFilters]
+;format[] = 0/<Format>/
+
+; Facet filters can be specified to limit hierarchical facet display to given values.
+; If no values are specified on a facet level, all items for the level are displayed.
+;[FacetFilters]
+;building[]=0/<Building>/
+;format[] = 0/<Format>/
