--- a/config/vufind/ComposedDriver.ini
+++ b/config/vufind/ComposedDriver.ini
@@ -14,12 +14,12 @@
 ;driver2 = DAIA
 ;driver3 = Demo
 
-; For each driver method it can be specified which drivers should be used and how they can be combined.
+; For each driver method it can be specified which drivers should be used and how they can be composed.
 ; The head needs to be [<driver method name>]. main_driver specifies the driver that is primarily used.
-; The results of the main driver can be combined with other driver results. Therefore, one needs to specify a
+; The results of the main driver can be composed with other driver results. Therefore, one needs to specify a
 ; merge_key. All results of the support drivers are then matched with the keys of the main driver. E.g. for the
-; method getHolding the results of multiple drivers can get combined if the match on "item_id".
-; The array support_drivers specify the support drivers and which of there keys should be combined with the main result.
+; method getHolding the results of multiple drivers can get composed if the match on "item_id".
+; The array support_drivers specify the support drivers and which of there keys should be composed with the main result.
 ; The format is: support_drivers["<DriverName"] = "<key1>,<key2>,...,<keyN>"
 
 ; Here are some examples how a configuration could look like for a combination of DAIA and PAIA
