--- a/config/vufind/ComposedDriver.ini
+++ b/config/vufind/ComposedDriver.ini
@@ -18,7 +18,7 @@
 ; The head needs to be [<driver method name>]. main_driver specifies the driver that is primarily used.
 ; The results of the main driver can be composed with other driver results. Therefore, one needs to specify a
 ; merge_key. All results of the support drivers are then matched with the keys of the main driver. E.g. for the
-; method getHolding the results of multiple drivers can get composed if the match on "item_id".
+; method getHolding the results of multiple drivers can get composed if they match on "item_id".
 ; The array support_drivers specify the support drivers and which of there keys should be composed with the main result.
 ; The format is: support_drivers["<DriverName"] = "<key1>,<key2>,...,<keyN>"
 
