throwing exceptions if methods not supported and individual merge key per driver

--- a/config/vufind/ComposedDriver.ini
+++ b/config/vufind/ComposedDriver.ini
@@ -16,11 +16,11 @@
 
 ; For each driver method it can be specified which drivers should be used and how they can be composed.
 ; The head needs to be [<driver method name>]. main_driver specifies the driver that is primarily used.
-; The results of the main driver can be composed with other driver results. Therefore, one needs to specify a
-; merge_key. All results of the support drivers are then matched with the keys of the main driver. E.g. for the
-; method getHolding the results of multiple drivers can get composed if they match on "item_id".
-; The array support_drivers specify the support drivers and which of there keys should be composed with the main result.
-; The format is: support_drivers["<DriverName"] = "<key1>,<key2>,...,<keyN>"
+; The results of the main driver can be composed with other driver results. Therefore, one needs to specify
+; merge_keys for the support drivers. All results of the support drivers are then matched with the keys of the main
+; driver. E.g. for the method getHolding the results of multiple drivers can get composed if they match on "item_id".
+; The array support_keys specifies which of there keys of the given support driver should be composed with the main result.
+; The format is: support_keys["<DriverName"] = "<key1>,<key2>,...,<keyN>"
 
 ; Here are some examples how a configuration could look like for a combination of DAIA and PAIA
 ; but it most likely wont work with the Demo driver
@@ -32,5 +32,5 @@
 ;
 ;[getHolding]
 ;main_driver = "driver2"
-;merge_key = "item_id"
-;support_drivers["driver3"] = "summary,barcode,item_notes"
+;merge_keys["driver3"] = "item_id"
+;support_keys["driver3"] = "summary,barcode,item_notes"
