Display jump links above combined search results (#3083)

--- a/config/vufind/combined.ini
+++ b/config/vufind/combined.ini
@@ -80,6 +80,8 @@ columns = 3
 ;
 ; distributed, left, right
 stack_placement = distributed
+; Jump links appear above the search results and link to each result module
+;jump_links = true
 
 [Solr]
 label = Catalog
