LibGuides and AZ: Display descriptions

--- a/config/vufind/LibGuides.ini
+++ b/config/vufind/LibGuides.ini
@@ -4,7 +4,8 @@
 timeout = 30
 
 ; Your institution id (called site id in api version 2; may have changed w/ upgrade)
-iid = my-id
+; # iid = my-id
+iid = 480
 
 ; API version to use (1 or 2)
 version = 2
@@ -32,3 +33,6 @@ default_limit        = 20
 ; changing tags, you may need to wait some time for content to be reindexed on
 ; the LibGuides end before the search will begin working here.
 ;defaultSearch = "general"
+
+; Parse and display the description below each title
+; displayDescription = true
