Fix config file default iid

--- a/config/vufind/LibGuides.ini
+++ b/config/vufind/LibGuides.ini
@@ -4,8 +4,7 @@
 timeout = 30
 
 ; Your institution id (called site id in api version 2; may have changed w/ upgrade)
-; # iid = my-id
-iid = 480
+iid = my-id
 
 ; API version to use (1 or 2)
 version = 2
