--- a/config/vufind/facets.ini
+++ b/config/vufind/facets.ini
@@ -363,7 +363,7 @@ custom_filter_field = "vufind"
 ;inverted_filters[include_books] = '-format:"Book"'
 
 ; Exclude filters can be specified to exclude certain filters from showing in hierarchical
-; facets. Regex.
+; facets.
 ;[ExcludeFilters]
 ;building[] = 0/<Building>/
 ;format[] = 0/<Format>/
