--- a/config/vufind/SierraRest.ini
+++ b/config/vufind/SierraRest.ini
@@ -36,6 +36,14 @@ use_prefixed_ids = false
 ; Default is 2. Set to 0 to disable retries.
 ;http_retries = 2
 
+; Translation prefix to use for messages coming from Sierra. By default a prefix is
+; not used, but a prefix may be used to distinguish the codes from any other
+; translations (or other libraries). To use a simple prefix in the default text
+; domain:
+; translationPrefix = "sierra_"
+; translationPrefix = "ILSMessages::"
+;translationPrefix = "ILSMessages::"
+
 [Authentication]
 ; When using patron-specific data access, different values may be used as the
 ; username and password when the user logs in via CAS, depending on how Sierra is
