--- a/config/vufind/SierraRest.ini
+++ b/config/vufind/SierraRest.ini
@@ -38,10 +38,8 @@ use_prefixed_ids = false
 
 ; Translation prefix to use for messages coming from Sierra. By default a prefix is
 ; not used, but a prefix may be used to distinguish the codes from any other
-; translations (or other libraries). To use a simple prefix in the default text
-; domain:
-; translationPrefix = "sierra_"
-; translationPrefix = "ILSMessages::"
+; translations (or other libraries). You can use a simple prefix in the default
+; domain (e.g. "sierra_") or a custom text domain (e.g. "ILSMessages::").
 ;translationPrefix = "ILSMessages::"
 
 [Authentication]
