renamed head to section

--- a/config/vufind/ComposedDriver.ini
+++ b/config/vufind/ComposedDriver.ini
@@ -15,7 +15,7 @@
 ;driver3 = Demo
 
 ; For each driver method it can be specified which drivers should be used and how they can be composed.
-; The head needs to be [<driver method name>]. main_driver specifies the driver that is primarily used.
+; The section needs to be [<driver method name>]. main_driver specifies the driver that is primarily used.
 ; The results of the main driver can be composed with other driver results. Therefore, one needs to specify
 ; merge_keys for the support drivers. All results of the support drivers are then matched with the keys of the main
 ; driver. E.g. for the method getHolding the results of multiple drivers can get composed if they match on "item_id".
