--- a/config/vufind/combined.ini
+++ b/config/vufind/combined.ini
@@ -32,7 +32,8 @@
 ;        will be displayed in the sidebar column. If set to an array of
 ;        recommendation settings (as per searches.ini), the specified recommendations
 ;        will be loaded into the side column. If set to false, side recommendations
-;        will be suppressed (default).
+;        will be suppressed (default). Adding the same recommendation module
+;        to multiple sections is unsupported.
 ; filter = One or more filters to apply to search results displayed in the column.
 ;          Use multiple "filter[] = ..." lines if multiple filters are needed.
 ; hiddenFilter = One or more hidden filters to apply to search results displayed in
