[VUFIND-1646] Fix errors in EDS.ini.

--- a/config/vufind/EDS.ini
+++ b/config/vufind/EDS.ini
@@ -8,9 +8,15 @@
 ; This setting controls the default sort order of search results; the selected
 ; option should be one of the options present in the [Sorting] section below.
 default_sort         = relevance
-limit_options        = 5,10,20,30,40,50
+; These settings control the result limit options for search results. default_limit
+; sets the default number of results per page. limit_options is a comma-separated
+; list of numbers to be presented to the end-user. If only one limit is required,
+; set default_limit and leave limit_options commented out.
 default_limit        = 20
-highlighting         = y
+limit_options        = 5,10,20,30,40,50
+; Set this to true in order to highlight keywords from the search query when they
+; appear in fields displayed in search results.
+highlighting         = true
 ; Common limiters are select type limiters to display on the basic search screen;
 ; the order of values in this comma-separated list will impact display order.
 common_limiters      = FC,FT,RV
