Add missing word.

--- a/config/vufind/ComposedDriver.ini
+++ b/config/vufind/ComposedDriver.ini
@@ -8,7 +8,7 @@
 ;drivers_config_path = private
 
 ; Definition of all the used drivers in the form <DriverName> = <DriverClass>
-; The name of config file for a driver needs to be the same <DriverName>
+; The name of config file for a driver needs to be the same as <DriverName>
 [Drivers]
 ;driver1 = PAIA
 ;driver2 = DAIA
