Syndetics cover images with VuFind fallback

--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -1223,6 +1223,12 @@ url = "https://api.vlb.de/api/v1/cover/"
 ; NOTE: SyndeticsPlus is incompatible with the tabs/accordion [List] views in
 ;       searches.ini. Do not turn it on if you are using these optional features.
 [Syndetics]
+; When the Syndetics cover image fallback is enabled, it will return generic covers based
+; on information Syndetics has related to the ISBN number or other number given. This
+; will prevent other fallbacks in VuFind from being tried, such as other cover image sources.
+; If the Syndetics cover image fallback is disabled, VuFind will query for the metadata first,
+; and only return an image if the Syndetics metadata returns a real cover image.
+use_syndetics_cover_image_fallback = false
 use_ssl = false
 plus = false
 ;plus_id = "MySyndeticsId"
