Logging: Add ReferenceId support for username

--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -1701,6 +1701,13 @@ skip_numeric = true
 ; This setting controls the title on the messages displayed in Office365:
 ;office365_title = "VuFind Log"
 
+; Specify a reference id to inject in all log messages, for use later in querying
+; the logs.  See https://docs.laminas.dev/laminas-log/processors/#referenceid.
+; May be useful in tracking excessive use violations of licensed content.
+; - Default, false, includes no reference id.
+; - 'username' logs the currently logged-in username, if there is one.
+;reference_id = false
+
 ; This section can be used to specify a "parent configuration" from which
 ; the current configuration file will inherit.  You can chain multiple
 ; configurations together if you wish.
