--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -2357,6 +2357,15 @@ lists = enabled
 ; searches.ini, but used to control the page sizes of lists of favorites:
 lists_default_limit   = 20
 ;lists_limit_options   = 10,20,40,60,80,100
+; If multi page selection is activated one can select elements on one page in the favorite list
+; and the elements are stay selected when switching to another page.
+multi_page_selection = true
+; Choose which type of select_all checkbox should be shown in the favorite list.
+; on_page - selects all elements on the current page
+; global - selects all elements of the current list (only makes sense if multi page selection is enabled)
+; both - shows on_page and global (only makes sense if multi page selection is enabled)
+; none - disable select_all checkboxes
+checkbox_select_all_type = both
 ; This section controls what happens when a record title in a favorites list
 ; is clicked. VuFind can either embed the full result directly in the list using
 ; AJAX or can display it at its own separate URL as a full HTML page.
