--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -1957,6 +1957,10 @@ related[] = "Similar"
 ; where they are found to the related module like so:
 ;related[] = "Bookplate:Filename:Section"
 
+; How many items are displayed on the similar items carousel record tab.
+; Default is 40.
+;similar_carousel_items = 40
+
 ; URLs for bookplates if enabled. The following tokens can be used:
 ;   %%img%% - image name, partial image name or full URL.
 ;   %%thumb%% - thumbnail image name, partial thumbnail image name or full URL.
