created mink tests, fixed bugs and refactored

--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -2362,8 +2362,8 @@ lists_default_limit   = 20
 multi_page_selection = true
 ; Choose which type of select_all checkbox should be shown in the favorite list.
 ; on_page - selects all elements on the current page
-; global - selects all elements of the current list (only makes sense if multi page selection is enabled)
-; both - shows on_page and global (only makes sense if multi page selection is enabled)
+; global - selects all elements of the current list (only works if multi page selection is enabled)
+; both - shows on_page and global (only works if multi page selection is enabled)
 ; none - disable select_all checkboxes
 checkbox_select_all_type = both
 ; This section controls what happens when a record title in a favorites list
