--- a/config/vufind/facets.ini
+++ b/config/vufind/facets.ini
@@ -294,7 +294,7 @@ translated_facets[] = callnumber-first:CallNumberFirst
 ;limitDelimiter = "::"
 
 ; Optional setting to enable FacetFilters and ExcludeFilters for advanced search facets.
-;enable_filters[] = true
+;enable_filters = true
 
 [HomePage]
 callnumber-first = "Call Number"
@@ -364,12 +364,12 @@ custom_filter_field = "vufind"
 
 ; Exclude filters can be specified to exclude certain filters from showing in hierarchical
 ; facets.
-;[ExcludeFilters]
+;[ExcludeHierarchicalFilters]
 ;building[] = 0/<Building>/
 ;format[] = 0/<Format>/
 
 ; Facet filters can be specified to limit hierarchical facet display to given values.
 ; If no values are specified on a facet level, all items for the level are displayed.
-;[FacetFilters]
+;[HierarchicalFacetFilters]
 ;building[] = 0/<Building>/
 ;format[] = 0/<Format>/
