--- a/config/vufind/facets.ini
+++ b/config/vufind/facets.ini
@@ -293,7 +293,8 @@ translated_facets[] = callnumber-first:CallNumberFirst
 ; limits must be separated using the same character set here.
 ;limitDelimiter = "::"
 
-; Optional setting to enable FacetFilters and ExcludeFilters for advanced search facets.
+; Optional setting to enable HierarchicalFacetFilters 
+; and HierarchicalExcludeFilters for advanced search facets.
 ;enable_filters = true
 
 [HomePage]
@@ -364,7 +365,7 @@ custom_filter_field = "vufind"
 
 ; Exclude filters can be specified to exclude certain filters from showing in hierarchical
 ; facets.
-;[ExcludeHierarchicalFilters]
+;[HierarchicalExcludeFilters]
 ;building[] = 0/<Building>/
 ;format[] = 0/<Format>/
 
