Add some useful comments to Folio.ini.

--- a/config/vufind/Folio.ini
+++ b/config/vufind/Folio.ini
@@ -1,5 +1,9 @@
 [API]
+; Base URL of your Okapi instance
 base_url = https://localhost:9130
+; Credentials for connecting VuFind to Okapi; note that this account will need to
+; have several specific permissions enabled. For more details, see:
+;   https://vufind.org/wiki/configuration:ils:folio
 username = diku_admin
 password = admin
 tenant = diku
