Use the HtmlAttributes helper in facet list for improved code readability.

--- a/config/vufind/facets.ini
+++ b/config/vufind/facets.ini
@@ -144,8 +144,8 @@ facet_limit = 30
 ;facet_matches_by_field[era_facet] = ".+0"
 
 ; By default, the side facets will only show 6 facets and then the "show more"
-; button. This can get configured with the showMore settings. A positive value is
-; required for "normal" facets, but for hierarchical values you can use 0 to disable
+; button. This can be configured with the showMore settings. A positive value is
+; required for "normal" facets, but for hierarchical facets you can use 0 to disable
 ; truncation and always show all available values.
 ; You can use the showMore[*] setting to set a new default setting.
 showMore[*] = 6
