Add support for a description column in fines.
Includes driver support for Demo and SierraRest. SierraRest also removes some custom handling of types and adds optional mappings. Finnish and Swedish translations include a fix for duplicate column heading.

--- a/config/vufind/SierraRest.ini
+++ b/config/vufind/SierraRest.ini
@@ -211,6 +211,13 @@ title_hold_excluded_item_codes = "e"
 ;a = patron_status_address_missing
 ;b = patron_status_card_blocked
 
+; This section allows modification of the default mapping from Sierra fine types to
+; VuFind fine types. By default fine types are displayed as is. Examples are listed
+; below.
+[FineTypeMappings]
+;Manual = ""
+;Overdue Renewal = "Overdue"
+
 ; Uncomment the following lines to enable password (PIN) change
 ;[changePassword]
 ; PIN change parameters. The default limits are taken from the interface documentation.
