Rename config setting.

--- a/config/vufind/HierarchyDefault.ini
+++ b/config/vufind/HierarchyDefault.ini
@@ -11,7 +11,7 @@ link_type = "Top"
 ; for the 'Top' setting. However, you can override that automatic check with an explicit
 ; field here if needed (this can be useful if you want to do folder-based navigation
 ; normally, but do a deep search into the tree when a user performs a search).
-;search_container_field = "hierarchy_all_parents_str_mv"
+;search_container_id_field = "hierarchy_all_parents_str_mv"
 
 [HierarchyTree]
 ; Are hierarchy trees visible? -- true or false (default false)
