--- a/config/vufind/HierarchyFlat.ini
+++ b/config/vufind/HierarchyFlat.ini
@@ -5,6 +5,13 @@
 ;     Top  - any record where is_hierarchy = hierarchy_top
 ;     None - never link to the collection module
 link_type = "Top"
+; When a user searches within a collection, which Solr field should be used to filter
+; the search results using the collection ID? By default, this is automatically set
+; based on link_type -- 'hierarchy_parent_id' for the 'All' setting and 'hierarchy_top_id'
+; for the 'Top' setting. However, you can override that automatic check with an explicit
+; field here if needed (this can be useful if you want to do folder-based navigation
+; normally, but do a deep search into the tree when a user performs a search).
+;search_container_id_field = "hierarchy_all_parents_str_mv"
 
 [HierarchyTree]
 ; Are hierarchy trees visible? -- true or false (default false)
