Support url configuration in EDS.ini

--- a/config/vufind/EDS.ini
+++ b/config/vufind/EDS.ini
@@ -323,3 +323,18 @@ AU = None
 ; documentation on options for different adapters.
 ; ttl, Time to Live, i.e. cache entry life time in seconds. 300 seconds by default.
 ;options[ttl] = 300
+
+; This section supports the EDSDatabases recommendation module,
+; which displays a list of the results' databases, each linking
+; to that database's individual website.
+[Databases]
+
+; Load database URLs from LibGuides.  Default is false.
+; Requires configuration in LibGuidesAPI.ini. 
+;useLibGuides = true
+
+; Map of database name (matching EDS API 'DbLabel' value) to website URL.
+; These databases are added to any retrieved from LibGuides, and override
+; the LibGuides URLs if the same name is present here.
+;url[Expensive Science Database] = https://some.url
+;url[Cool Humanities Database] = https://another.url
