Document module in searches.ini

--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -254,6 +254,9 @@ WorkKeys = year
 ; DPLATerms:[collapsed]
 ;       Display results from the DPLA catalog. Provide a boolean to have the sidebar
 ;       collapsed or open on page load.
+; EDSDatabases:[result limit]
+;       Displays a list of the databases referenced in EDS facets, each linking
+;       to its individual website.
 ; EDSResults:[GET parameter]:[result limit]
 ;       Display EDS search results matching the terms found in the specified
 ;       GET parameter (default = "lookfor"), limited to a specified number of
