Bring back to base

--- a/config/vufind/config.ini
+++ b/config/vufind/config.ini
@@ -1007,6 +1007,7 @@ coverimagesCache = true
 ; below will match any images from the mylibrary.edu domain; you can also use
 ; "/.*/" to turn on caching for all proxied images.
 ;coverproxyCache[] = "/.*\.?mylibrary\.edu/"
+; BrowZine DOI icons:
 coverproxyCache[] = "/assets\.thirdiron\.com/"
 
 ; This setting controls how cover image URLs are loaded. They could be loaded as
@@ -2363,6 +2364,3 @@ description = "The REST API provides access to search functions and records cont
 ; By default, VuFind sorts text in a locale-agnostic way; if this setting is
 ; turned on, the current user-selected locale will impact sort order.
 ;use_locale_sorting = true
-
-[TAMU]
-full_text_formats = Journal:Serial:Newspaper:Conference Proceeding
