Generalize to work beyond EDS

--- a/config/vufind/EDS.ini
+++ b/config/vufind/EDS.ini
@@ -324,10 +324,19 @@ AU = None
 ; ttl, Time to Live, i.e. cache entry life time in seconds. 300 seconds by default.
 ;options[ttl] = 300
 
-; This section supports the EDSDatabases recommendation module,
+; This section supports the Databases recommendation module,
 ; which displays a list of the results' databases, each linking
 ; to that database's individual website.
 [Databases]
+
+; Define the facet hierarcy path leading to each database.
+; For EDS (the databases are at ContentProvider/list):
+;resultFacet[] = 'ContentProvider'
+;resultFacet[] = 'list'
+
+; For each database facet, define the key to the database name
+; For EDS:
+;resultFacetNameKey = 'value'
 
 ; Load database URLs from LibGuides.  Default is false.
 ; Requires configuration in LibGuidesAPI.ini. 
