--- a/config/vufind/LibGuidesAPI.ini
+++ b/config/vufind/LibGuidesAPI.ini
@@ -30,7 +30,7 @@ api_base_url = https://lgapi-us.libapps.com/1.2
 ; Note this is not used for the LibGuidesAZ search
 ; implementation; see LibGuidesAZ.ini for that.
 ; This is used where the full list of databases is needed
-; by EDSDatabases.
+; by the Databases recommendation module.
 [GetAZ]
 ; Duration (seconds) to cache response data.  Default is 600.
 ;cache_lifetime = 600
