--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -251,12 +251,12 @@ WorkKeys = year
 ;       Display catalog search results matching the terms found in the specified
 ;       GET parameter (default = "lookfor"), limited to a specified number of
 ;       matches (default = 5).  This is designed for use with non-catalog modules.
+; Databases:[result limit]
+;       Displays a list of the databases referenced in EDS or similar facets, each
+;       linking to its individual website.
 ; DPLATerms:[collapsed]
 ;       Display results from the DPLA catalog. Provide a boolean to have the sidebar
 ;       collapsed or open on page load.
-; EDSDatabases:[result limit]
-;       Displays a list of the databases referenced in EDS facets, each linking
-;       to its individual website.
 ; EDSResults:[GET parameter]:[result limit]
 ;       Display EDS search results matching the terms found in the specified
 ;       GET parameter (default = "lookfor"), limited to a specified number of
