--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -254,10 +254,14 @@ WorkKeys = year
 ;
 ; Available modules recommended for use in the side area:
 ;
-; CatalogResults:[GET parameter]:[result limit]
+; CatalogResults:[GET parameter]:[result limit]:[hidden filters key]:[custom heading]
 ;       Display catalog search results matching the terms found in the specified
 ;       GET parameter (default = "lookfor"), limited to a specified number of
-;       matches (default = 5).  This is designed for use with non-catalog modules.
+;       matches (default = 5). This is designed for use with non-catalog modules.
+;       Hidden filters key, if defined, is a reference to hidden filters for these
+;       results, defined in the [AbstractSearchObjectHiddenFilters] section of the
+;       searches.ini file. The optional custom heading overrides the default for this
+;       recommendation module. 
 ; DPLATerms:[collapsed]
 ;       Display results from the DPLA catalog. Provide a boolean to have the sidebar
 ;       collapsed or open on page load.
@@ -861,3 +865,12 @@ maxLimit = 100
 ; ttl, Time to Live, i.e. cache entry life time in seconds. 300 seconds by default.
 ;options[ttl] = 300
 
+; This section provides hidden filters for AbstractSearchObject recommendation
+; module whose backend search behavior is configured in this file.
+[AbstractSearchObjectHiddenFilters]
+
+; Hidden filters are defined as in [RawHiddenFilters], i.e. each is an array in
+; order to handle more complex filters.  The key must match a [hidden filters key]
+; in a recommendation module, defined in the configuration file for the primary
+; search results.
+;video[] = "format:Video"
