Rename enable_filters. Conditional loading of facet helper

--- a/config/vufind/facets.ini
+++ b/config/vufind/facets.ini
@@ -295,7 +295,7 @@ translated_facets[] = callnumber-first:CallNumberFirst
 
 ; Optional setting to enable HierarchicalFacetFilters 
 ; and HierarchicalExcludeFilters for advanced search facets.
-;enable_filters = true
+;enable_hierarchical_filters = true
 
 [HomePage]
 callnumber-first = "Call Number"
