Add example default_side_recommend to EDS.ini

--- a/config/vufind/EDS.ini
+++ b/config/vufind/EDS.ini
@@ -32,6 +32,7 @@ default_view         = brief
 ; sections below.
 ;default_top_recommend[] = TopFacets:FacetsTop:EDS
 default_side_recommend[] = SideFacets:Facets:CheckboxFacets:EDS
+;default_side_recommend[] = Databases:5:EDS
 ;default_noresults_recommend[] = SwitchTab
 default_noresults_recommend[] = SwitchType
 default_noresults_recommend[] = RemoveFilters
