--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -259,8 +259,8 @@ WorkKeys = year
 ;       GET parameter (default = "lookfor"), limited to a specified number of
 ;       matches (default = 5). This is designed for use with non-catalog modules.
 ;       Hidden filters may be defined in the specified section of the searches.ini
-;       file. The optional custom heading overrides the default for this
-;       recommendation module. 
+;       file; see [CatalogResultsVideoFilter] below for an example ofthis. The
+;       optional custom heading overrides the default for this recommendation module.
 ; DPLATerms:[collapsed]
 ;       Display results from the DPLA catalog. Provide a boolean to have the sidebar
 ;       collapsed or open on page load.
