Add an option to always display the "Reset Filters" button.
By default the "Reset Filters" button is only displayed when retain_filters_by_default is enabled. The new setting allows it to be displayed regardless of retain_filters_by_default.

--- a/config/vufind/EDS.ini
+++ b/config/vufind/EDS.ini
@@ -47,6 +47,10 @@ default_noresults_recommend[] = RemoveFilters
 ; always perform new searches unfiltered (false)?
 retain_filters_by_default = true
 
+; Whether to always display the "Reset Filters" button regardless of the
+; retain_filters_by_default setting. Default is
+always_display_reset_filters = false
+
 ; This is the timeout in seconds when communicating with the EDS server.
 timeout = 120
 
