--- a/config/vufind/EDS.ini
+++ b/config/vufind/EDS.ini
@@ -47,8 +47,8 @@ default_noresults_recommend[] = RemoveFilters
 ; always perform new searches unfiltered (false)?
 retain_filters_by_default = true
 
-; Whether to always display the "Reset Filters" button regardless of the
-; retain_filters_by_default setting. Default is false.
+; Whether to always (when there are active filters) display the "Reset Filters"
+; button regardless of the retain_filters_by_default setting. Default is false.
 always_display_reset_filters = false
 
 ; This is the timeout in seconds when communicating with the EDS server.
