--- a/config/vufind/Summon.ini
+++ b/config/vufind/Summon.ini
@@ -70,8 +70,8 @@ snippets = true
 ; always perform new searches unfiltered (false)?
 retain_filters_by_default = true
 
-; Whether to always display the "Reset Filters" button regardless of the
-; retain_filters_by_default setting. Default is false.
+; Whether to always (when there are active filters) display the "Reset Filters"
+; button regardless of the retain_filters_by_default setting. Default is false.
 always_display_reset_filters = false
 
 ; The filters listed below will be applied to all new searches by default. Omit
