Set default headings within code, and drop filter from modules that don't support it

--- a/config/vufind/searches.ini
+++ b/config/vufind/searches.ini
@@ -258,29 +258,24 @@ WorkKeys = year
 ;       Display catalog search results matching the terms found in the specified
 ;       GET parameter (default = "lookfor"), limited to a specified number of
 ;       matches (default = 5). This is designed for use with non-catalog modules.
-;       See below re: [ini section] and [custom heading].
+;       The optional custom heading overrides the default for this recommendation.
 ;       Hidden filters may be defined in the specified section of the searches.ini
-;       file; see [CatalogResultsVideoFilter] below for an example of this. The
-;       optional custom heading overrides the default for this recommendation module.
+;       file; see [CatalogResultsVideoFilter] below for an example of this.
 ; DPLATerms:[collapsed]
 ;       Display results from the DPLA catalog. Provide a boolean to have the sidebar
 ;       collapsed or open on page load.
-; EDSResults:[GET parameter]:[result limit]:[custom heading]:[ini section]
+; EDSResults:[GET parameter]:[result limit]:[custom heading]
 ;       Display EDS search results matching the terms found in the specified
 ;       GET parameter (default = "lookfor"), limited to a specified number of
-;       matches (default = 5).
-;       Hidden filters may be defined in the specified section of the EDS.ini
-;       file; see [CatalogResultsVideoFilter] below for an example of this. The
-;       optional custom heading overrides the default for this recommendation module.
+;       matches (default = 5). The optional custom heading overrides the default
+;       for this recommendation.
 ; EDSResultsDeferred:[GET parameter]:[result limit]
 ;       Same as EDSResults, but loaded via AJAX.
-; EPFResults:[GET parameter]:[result limit]:[custom heading]:[ini section]
+; EPFResults:[GET parameter]:[result limit]:[custom heading]
 ;       Display EPF (EBSCO Publication Finder) search results matching the terms
 ;       found in the specified GET parameter (default = "lookfor"), limited to a
-;       specified number of matches (default = 5).
-;       Hidden filters may be defined in the specified section of the EPF.ini
-;       file; see [CatalogResultsVideoFilter] below for an example of this. The
-;       optional custom heading overrides the default for this recommendation module.
+;       specified number of matches (default = 5). The optional custom heading overrides the default
+;       for this recommendation.
 ; EPFResultsDeferred:[GET parameter]:[result limit]
 ;       Same as EPFResults, but loaded via AJAX.
 ; EuropeanaResults:[url]:[requestParam]:[limit]:[unwanted data providers]
@@ -310,22 +305,18 @@ WorkKeys = year
 ;       who owns a subject guide whose title most closely matches the search terms.
 ;       Uses configuration in LibGuidesAPI.ini and requires configuration in
 ;       contentsecuritypolicy.ini.
-; LibGuidesResults:[GET parameter]:[result limit]:[custom heading]:[ini section]
+; LibGuidesResults:[GET parameter]:[result limit]:[custom heading]
 ;       Display LibGuides research guides search results matching the terms found in
 ;       the specified GET parameter (default = "lookfor"), limited to a specified
-;       number of matches (default = 5).
-;       Hidden filters may be defined in the specified section of the LibGuides.ini
-;       file; see [CatalogResultsVideoFilter] below for an example of this. The
-;       optional custom heading overrides the default for this recommendation module.
+;       number of matches (default = 5). The optional custom heading overrides the
+;       default for this recommendation.
 ; LibGuidesResultsDeferred:[GET parameter]:[result limit]
 ;       Same as LibGuidesResults, but loaded via AJAX.
-; LibGuidesAZResults:[GET parameter]:[result limit]:[custom heading]:[ini section]
+; LibGuidesAZResults:[GET parameter]:[result limit]:[custom heading]
 ;       Display LibGuides A-Z Databases search results matching the terms found in
 ;       the specified GET parameter (default = "lookfor"), limited to a specified
-;       number of matches (default = 5).
-;       Hidden filters may be defined in the specified section of the LibGuidesAZ.ini
-;       file; see [CatalogResultsVideoFilter] below for an example of this. The
-;       optional custom heading overrides the default for this recommendation module.
+;       number of matches (default = 5). The optional custom heading overrides the
+;       default for this recommendation.
 ; LibGuidesAZResultsDeferred:[GET parameter]:[result limit]
 ;       Same as LibGuidesAZResults, but loaded via AJAX.
 ; OpenLibrarySubjects:[GET parameter]:[limit]:[date filter]:[Subject types]
